--- a/manifest.json
+++ b/manifest.json
@@ -7,9 +7,9 @@
 
     "background": {
       "service_worker": "background.js"
-      
     },
-
+    
+    "host_permissions": ["<all_urls>"],
 
     "permissions": [
       "storage", 
