--- a/manifest.json
+++ b/manifest.json
@@ -1,47 +1,43 @@
 {
-    "name": "health reminders",
-    "description": "Remind you to take breaks, better for your health",
-    "version": "1.0",
-    "manifest_version": 3,
+  "name": "Health Reminders",
+  "description": "Remind you to take breaks, better for your health",
+  "version": "1.0",
+  "manifest_version": 3,
 
 
-    "background": {
-      "service_worker": "background.js"
-    },
-    
-    "host_permissions": ["<all_urls>"],
-
-    "permissions": [
-      "storage", 
-      "activeTab", 
-      "scripting", 
-      "alarms", 
-      "notifications"],
-    
-    
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "/images/get_started16.png",
-        "48": "/images/get_started48.png",
-        "128": "/images/get_started128.png"
-      }
-    },
-
-    "icons": {
-        "16": "/images/get_started16.png",
-        "48": "/images/get_started48.png",
-        "128": "/images/get_started128.png"
-    },
-
-    
-
-    "options_page": "options.html",
-    "content_scripts": [{
-        "matches": ["http://*/*", "https://*/*"],
-        "js": ["myscript.js"],
-        "css": ["main.css"]
-    }]
-    
-  }
+  "background": {
+    "service_worker": "background.js"
+  },
   
+  "host_permissions": ["<all_urls>"],
+
+  "permissions": [
+    "storage", 
+    "activeTab", 
+    "scripting", 
+    "alarms", 
+    "notifications"],
+  
+  
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "/images/balance16.png",
+      "48": "/images/balance48.png",
+      "128": "/images/balance128.png"
+    }
+  },
+
+  "icons": {
+      "16": "/images/balance16.png",
+      "48": "/images/balance48.png",
+      "128": "/images/balance128.png"
+  },
+
+  
+  "content_scripts": [{
+      "matches": ["http://*/*", "https://*/*"],
+      "css": ["HEmain.css"]
+  }]
+  
+}
